--- a/eDuka/templates/navbar.html
+++ b/eDuka/templates/navbar.html
@@ -5,4 +5,21 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-</nav>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+        </li>
+   
+      </ul>
+      <div class="form-inline my-2 my-lg-0">
+           <a href="#"class="btn btn-warning">Login</a>
+           
+           <a href="{% url 'cart' %}">
+              <img  id="cart-icon" src="{% static 'images/6+cart.png' %}" style="width: 25px;display: inline-block;margin-left: 15px;">
+          </a>
+          <p id="cart-total" style="display: block;text-align: center;color:#fff;background-color: red;width: 20px;height: 25px;border-radius: 50%;font-size: 14px;">0</p>
+
+      </div>
+    </div>
+  </nav>
