--- a/eDuka/templates/all-store/index.html
+++ b/eDuka/templates/all-store/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="row">
     <div class="col-lg-4">
-        <img class="thumbnail" style="width: 350px;height: 200px; box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);" src="{% static 'Images/2+placeholder.png' %}">
+        <img class="thumbnail" style="width: 350px;height: 200px; box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);" src="{% static 'images/2+placeholder.png' %}">
         <div class="box-element product" style="box-shadow:hsl(0, 0%, 80%) 0 0 16px;background-color: #fff; border-radius: 4px;padding: 10px;">
             <h6><strong>Product</strong></h6>
             <hr>
@@ -17,7 +17,7 @@
     </div>
 
     <div class="col-lg-4">
-        <img class="thumbnail" style="width: 350px;height: 200px; box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);" src="{% static 'Images/2+placeholder.png' %}">
+        <img class="thumbnail" style="width: 350px;height: 200px; box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);" src="{% static 'images/2+placeholder.png' %}">
         <div class="box-element product" style="box-shadow:hsl(0, 0%, 80%) 0 0 16px;background-color: #fff; border-radius: 4px;padding: 10px;">
             <h6><strong>Product</strong></h6>
             <hr>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="col-lg-4">
-        <img class="thumbnail" style="width: 350px;height: 200px; box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);" src="{% static 'Images/2+placeholder.png' %}">
+        <img class="thumbnail" style="width: 350px;height: 200px; box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);" src="{% static 'images/2+placeholder.png' %}">
         <div class="box-element product" style="box-shadow:hsl(0, 0%, 80%) 0 0 16px;background-color: #fff; border-radius: 4px;padding: 10px;">
             
             <h6><strong>Product</strong></h6>
