--- a/eDuka/templates/all-store/cart.html
+++ b/eDuka/templates/all-store/cart.html
@@ -31,7 +31,20 @@
                 <div style="flex:1"><strong>Total</strong></div>
             </div>
             
-            
+            <div class="cart-row">
+                <div style="flex:2"><img class="row-image" src="{% static 'images/2+placeholder.png' %}"></div>
+                <div style="flex:2"><p>Product 1</p></div>
+                <div style="flex:1"><p>$20</p></div>
+                <div style="flex:1">
+                    <p class="quantity">2</p>
+                    <div class="quantity">
+                        <img class="chg-quantity" src="{% static  'images/3+arrow-up.png' %}">
+                
+                        <img class="chg-quantity" src="{% static  'images/2+arrow-down.png' %}">
+                    </div>
+                </div>
+                <div style="flex:1"><p>$32</p></div>
+            </div>
 
         </div>
     </div>
