--- a/eDuka/templates/all-store/checkout.html
+++ b/eDuka/templates/all-store/checkout.html
@@ -14,9 +14,9 @@
                     </div>
                 </div>
                 
-                <div id="shipping-info">
+                <div id="delivery-info">
                     <hr>
-                    <p>Shipping Information:</p>
+                    <p>Delivery Information:</p>
                     <hr>
                     <div class="form-field">
                         <input class="form-control" type="text" name="address" placeholder="Address..">
