--- a/eDuka/templates/navbar.html
+++ b/eDuka/templates/navbar.html
@@ -1,6 +1,13 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{% url 'index' %}">eDuka</a>
+<nav class="navbar navbar-expand-lg navbar-ligh bg-light">
+   <div class="row">
+     <div class=col-md-4>
+      <a class="navbar-brand" href="{% url 'index' %}" style="font-weight: bolder;font-size: x-large;font-size: 25px;">eDuka</a>      
+     </div>
+     <div class=col-md-8 style="padding: 10px 60px 0px 0px;">
+      <img  id="cart-icon" src="{% static 'images/6+cart.png' %}" style="width: 25px;display: inline-block;margin-left: 15px;">
+     </div>
+   </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,11 +17,22 @@
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
         </li>
-   
       </ul>
+      <!-- <ul class="navbar-nav mr-auto" style="padding: 0px 0px 0px 100px; text-align: left;margin-left: 20px;">
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'index' %}">About <span class="sr-only">(current)</span></a>
+        </li>
+      </ul> -->
+
       <div class="form-inline my-2 my-lg-0">
+        <div class="row">
+          <div class="col md 2">
            <a href="#"class="btn btn-warning">Login</a>
-           
+          </div>
+          <div class="col md 2">
+           <a href="#"class="btn btn-secondary">Logout</a>
+           </div>
+          </div> 
            <a href="{% url 'cart' %}">
               <img  id="cart-icon" src="{% static 'images/6+cart.png' %}" style="width: 25px;display: inline-block;margin-left: 15px;">
           </a>
