--- a/eDuka/templates/all-store/search.html
+++ b/eDuka/templates/all-store/search.html
@@ -1,1 +1,22 @@
-Hello world!
+{%extends 'all-store/base.html'%} 
+{% block content %}
+<div class="container">
+  <div class="row">
+    {% if product%}
+      <h2>Found {{ product|length }} of searched term {{message}}</h2>
+    {% else %}
+    {% endif %}
+  </div>
+  <div class="row">
+  {% if products %}
+    {% for product in products %}
+      <div class="col-sm-6 col-md-3">
+          <h1>{{product.title}}</h1>
+          <h1>{{product.image}}</h1>
+          <img src="{{product.imageURL}}" class="img-responsive w-100 btn btn-outline-info" alt=""> 
+      </div>
+    {% endfor %}
+  {% endif %}
+  </div>
+</div>
+{% endblock %}
