--- a/eDuka/templates/all-store/index.html
+++ b/eDuka/templates/all-store/index.html
@@ -12,6 +12,7 @@
     
 </head>
 <body>
+    <img src="/static/images/giphy.gif" alt="" width="1110px%" height="130px">
     <div class="row">
         {% for product in products %}
         <div class="col-lg-4">
