--- a/eDuka/templates/all-store/search.html
+++ b/eDuka/templates/all-store/search.html
@@ -9,7 +9,7 @@
     {% endif %}
   </div>
   <div class="row">
-  {% if product %}
+  {% if products %}
     {% for product in products %}
       <div class="col-sm-6 col-md-3">
           <h1>{{product.category}}</h1>
