--- a/eDuka/templates/django_registration/registration_form.html
+++ b/eDuka/templates/django_registration/registration_form.html
@@ -1,7 +1,7 @@
 {%extends "django_registration/base.html"%} 
-{% load bootstrap3 %}
+{% load bootstrap4 %}
 {% block content %}
-<div class="container">
+<div class="container" style="background-color: cyan;">
   <div class="row">
     <!-- Empty div -->
     <div class="col-md-4"></div>
