--- a/eDuka/templates/navbar.html
+++ b/eDuka/templates/navbar.html
@@ -23,14 +23,14 @@
           <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'index' %}">About <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'about' %}">About <span class="sr-only">(current)</span></a>
         </li>
 
         <form class="navbar-form" role="search" action="{% url 'search_results' %}">
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search Product" name="product">
             <div class="input-group-btn">
-              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </div>
           </div>
           <i class="fa fa-shopping-cart" style="font-size:48px;color:black"></i>
