--- a/eDuka/templates/registration/login.html
+++ b/eDuka/templates/registration/login.html
@@ -1,11 +1,10 @@
 {%extends "django_registration/base.html"%}
-{% load bootstrap3 %}
+{% load bootstrap4 %}
 {% block content %}
-<div class="container">
+<div class="container" style="background-color: cyan;">
   <div class="row">
     <!-- Empty div -->
     <div class="col-md-4">
-      <img src="/static/images/EDbTOnaVAAE61OK.jpg" alt="">
     </div>
     <div class="col-md-4">
       {% if form.errors %}
